# backend/crud-api-dynamodb/packages/functions/src/product/app.ts
@@ -1,3 +1,4 @@
+import 'dotenv/config'
 import awsServerlessExpress from 'aws-serverless-express';
 import { APIGatewayProxyEvent, Context } from 'aws-lambda';
 import express, { Request, Response } from 'express';
@@ -7,20 +8,39 @@ import { ProductModel } from "../common/models/Product";
 import swaggerUi from "swagger-ui-express";
 import swaggerFile from "./swagger-output.json" assert { type: "json" };
 
-console.log(swaggerFile)
+
 mongooseConnect.then(value => {
     // console.log(value)
 })
 // Create the Express app
 const app = express();
 
+// enable CORS for all routes and for our specific API-Key header
+app.use(function (req, res, next) {
+    res.header('Access-Control-Allow-Origin', '*')
+    res.header('Access-Control-Allow-Headers', 'Origin, X-Requested-With, Content-Type, Accept, api_key')
+    next()
+})
 // https://medium.com/swlh/automatic-api-documentation-in-node-js-using-swagger-dd1ab3c78284
 app.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerFile))
+// PROTECT ALL ROUTES THAT FOLLOW
+app.use((req, res, next) => {
+    const apiKey = req.get('api_key')
+    if (!apiKey || apiKey !== process.env.API_KEY) {
+        res.status(401).json({error: 'unauthorised'})
+    } else {
+        next()
+    }
+})
+
 
 app.use(express.json());
 
 // Get all products
 app.get('/products', async (_req: Request, res: Response) => {
+    /* #swagger.security = [{
+           "apiKeyAuth": []
+    }] */
     try {
         const products = await ProductModel.find().exec();
         res.json(products);
@@ -31,6 +51,9 @@ app.get('/products', async (_req: Request, res: Response) => {
 
 // Get a specific product by ID
 app.get('/products/:productId', async (req: Request, res: Response) => {
+    /* #swagger.security = [{
+           "apiKeyAuth": []
+    }] */
     const { productId } = req.params;
     try {
         const product = await ProductModel.findById(productId).exec();
@@ -46,6 +69,9 @@ app.get('/products/:productId', async (req: Request, res: Response) => {
 
 // Create a new product
 app.post('/products', async (req: Request, res: Response) => {
+    /* #swagger.security = [{
+           "apiKeyAuth": []
+    }] */
     const newProduct = req.body;
     /*    #swagger.parameters['obj'] = {
             in: 'body',
@@ -81,6 +107,9 @@ app.post('/products', async (req: Request, res: Response) => {
 
 // Update a product
 app.put('/products/:productId', async (req: Request, res: Response) => {
+    /* #swagger.security = [{
+           "apiKeyAuth": []
+    }] */
     const { productId } = req.params;
     const updatedProduct = req.body;
     /*    #swagger.parameters['obj'] = {
@@ -120,6 +149,9 @@ app.put('/products/:productId', async (req: Request, res: Response) => {
 
 // Delete a product
 app.delete('/products/:productId', async (req: Request, res: Response) => {
+    /* #swagger.security = [{
+           "apiKeyAuth": []
+    }] */
     const { productId } = req.params;
     try {
         const product = await ProductModel.findByIdAndDelete(productId).exec();
@@ -132,6 +164,8 @@ app.delete('/products/:productId', async (req: Request, res: Response) => {
         res.status(500).json({ error: 'Internal server error' });
     }
 });
+
+
 
 // Lambda handler function
 const server = awsServerlessExpress.createServer(app);
